# evme_streamlit

./: .gitignore  16July26 EV Listings.md  README.md  example response.json  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
pages/: 2_vehicle_variables.py  Find_listings_nearby.py  chargers.py
random crap/pages/: Find_listings_nearby.py  What_do_you_have.py  What_do_you_want.py  make_mode_year_trim_input.py  utils.py  vin_lookup.py
random crap/tmp/: EV_Spec_vehicle_db_example.json
