[tool.poetry]
name = "evme-streamlit"
version = "0.1.0"
description = "Streamlit prototype for EV dealership listings"
authors = ["Copeland Carter <smartycope@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
streamlit = ">=1.58.0"
requests = ">=2.31.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
